--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </p>
       </div>
       <div class="six">
-        <img src="img/anju.jpg" alt="" class = "girl-dp" id="imagePath" />
+        <img src="img/03B5D531-1072-4DE6-8DAA-DA7CA956350F_1_201_a.jpeg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
           <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
           <h5 id="wishText">kuch kuch</h5>
