--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Happy Valentine :)</title>
+    <title>Just something for you :)</title>
     <link
       rel="stylesheet"
     />
@@ -17,17 +17,17 @@
       <div class="one">
         <h1 class="one">
           Hey
-          <span id="name">Anju!</span>
+          <span id="name">Yesha!</span>
         </h1>
         <p class="two" id="greetingText">I really like your name btw!</p>
       </div>
       <div class="three">
-        <p>It's Valentine!!! :D</p>
+        <p>The day finally came :D</p>
       </div>
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day!! Yeee! Love and blah blah...
+            I really like you!!!!!!!! blah blah blah...
           </p>
           <p class="fake-btn">Send</p>
         </div>
@@ -51,7 +51,7 @@
       <div class="six">
         <img src="img/03B5D531-1072-4DE6-8DAA-DA7CA956350F_1_201_a.jpeg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
+          <h3 class="wish-hbd">Will you be my girlfriend?</h3>
           <h5 id="wishText">kuch kuch</h5>
         </div>
       </div>
