changed girl image

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </p>
       </div>
       <div class="six">
-        <img src="" alt="Yesha" class = "girl-dp" id="imagePath" />
+        <img src="img/IMG_1512.jpg" alt="Yesha" class = "girl-dp" id="imagePath" />
         <div class="wish">
           <h3 class="wish-hbd">Will you be my girlfriend?</h3>
           <h5 id="wishText">kuch kuch</h5>
