--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </p>
       </div>
       <div class="six">
-        <img src="img/IMG_1837.PNG" alt="Teronish" class = "girl-dp" id="imagePath" />
+        <img src="img/IMG_1837.jpg" alt="Teronish" class = "girl-dp" id="imagePath" />
         <div class="wish">
           <h3 class="wish-hbd">I am realllyyy sorrrryyy! Be my girl again?</h3>
           <h5 id="wishText">kuch kuch</h5>
