--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="one">
         <h1 class="one">
           Hey
-          <span id="name">Teronish!</span>
+          <span id="name">Kavya!</span>
         </h1>
         <p class="two" id="greetingText">I really like your name btw!</p>
       </div>
@@ -27,7 +27,7 @@
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            I'm really sorrrryyyy!! blah blah blah..
+            I really like you!!!!!!!! blah blah blah...
           </p>
           <p class="fake-btn">Send</p>
         </div>
@@ -49,9 +49,9 @@
         </p>
       </div>
       <div class="six">
-        <img src="img/IMG_1837.jpg" alt="Teronish" class = "girl-dp" id="imagePath" />
+        <img src="img/IMG_2061.JPG" alt="Kavya" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">I am realllyyy sorrrryyy! Be my girl again?</h3>
+          <h3 class="wish-hbd">Will you go out on a date with me </h3>
           <h5 id="wishText">kuch kuch</h5>
         </div>
       </div>
