--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="one">
         <h1 class="one">
           Hey
-          <span id="name">Kavya!</span>
+          <span id="name">Kresha!</span>
         </h1>
         <p class="two" id="greetingText">I really like your name btw!</p>
       </div>
@@ -49,9 +49,9 @@
         </p>
       </div>
       <div class="six">
-        <img src="img/IMG_2061.JPG" alt="Kavya" class = "girl-dp" id="imagePath" />
+        <img src="img/IMG_2061.JPG" alt="Kresha" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Will you go out on a date with me </h3>
+          <h3 class="wish-hbd">Will you be my girlfriend? </h3>
           <h5 id="wishText">kuch kuch</h5>
         </div>
       </div>
