--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </p>
       </div>
       <div class="six">
-        <img src="img/IMG_2061.JPG" alt="Kresha" class = "girl-dp" id="imagePath" />
+        <img src="img/kresha.JPG" alt="Kresha" class = "girl-dp" id="imagePath" />
         <div class="wish">
           <h3 class="wish-hbd">Will you be my girlfriend? </h3>
           <h5 id="wishText">kuch kuch</h5>
