--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         </p>
       </div>
       <div class="six">
-        <img src="img/kresha.JPG" alt="Kresha" class = "girl-dp" id="imagePath" />
+        <img src="" alt="Kresha" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Will you be my girlfriend? </h3>
+          <h3 class="wish-hbd">Will you go out on a date with me? </h3>
           <h5 id="wishText">kuch kuch</h5>
         </div>
       </div>
