--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </p>
       </div>
       <div class="six">
-        <img src="" alt="Kresha" class = "girl-dp" id="imagePath" />
+        <img src="img/jiya.JPG" alt="Jiya" class = "girl-dp" id="imagePath" />
         <div class="wish">
           <h3 class="wish-hbd">Will you go out on a date with me? </h3>
           <h5 id="wishText">kuch kuch</h5>
