--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            I really like you!!!!!!!! blah blah blah...
+            I'm really sorry!!!! wont happen again...
           </p>
           <p class="fake-btn">Send</p>
         </div>
@@ -49,9 +49,9 @@
         </p>
       </div>
       <div class="six">
-        <img src="img/jiya.JPG" alt="Jiya" class = "girl-dp" id="imagePath" />
+        <img src="img/khushicutie.JPG" alt="Khushi" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Will you go out on a date with me? </h3>
+          <h3 class="wish-hbd">I am really sortty please forgive me!  </h3>
           <h5 id="wishText">kuch kuch</h5>
         </div>
       </div>
