--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         </p>
       </div>
       <div class="six">
-        <img src="img/khushicutie.JPG" alt="Khushi" class = "girl-dp" id="imagePath" />
+        <img src="" alt="Sanjana" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">I am really sortty please forgive me!  </h3>
+          <h3 class="wish-hbd">Will you be mine?  </h3>
           <h5 id="wishText">kuch kuch</h5>
         </div>
       </div>
