--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            I'm really sorry!!!! wont happen again...
+            I really like you!!!! Blah Blah Blah....
           </p>
           <p class="fake-btn">Send</p>
         </div>
