--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </p>
       </div>
       <div class="six">
-        <img src="" alt="Sanjana" class = "girl-dp" id="imagePath" />
+        <img src="img/sanjana.jpeg" alt="Sanjana" class = "girl-dp" id="imagePath" />
         <div class="wish">
           <h3 class="wish-hbd">Will you be mine?  </h3>
           <h5 id="wishText">kuch kuch</h5>
