--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="one">
         <h1 class="one">
           Hey
-          <span id="name">Jiya!</span>
+          <span id="name">Janvi!</span>
         </h1>
         <p class="two" id="greetingText">I really like your name btw!</p>
       </div>
@@ -27,7 +27,7 @@
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            I really like you!!!! Blah Blah Blah....
+           I am really sorry!!!! Blah Blah Blah....
           </p>
           <p class="fake-btn">Send</p>
         </div>
@@ -49,9 +49,9 @@
         </p>
       </div>
       <div class="six">
-        <img src="img/sanjana.jpeg" alt="Sanjana" class = "girl-dp" id="imagePath" />
+        <img src="img/janvi.jpeg" alt="Janvi" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Will you be mine?  </h3>
+          <h3 class="wish-hbd">Will you please forgive me??  </h3>
           <h5 id="wishText">kuch kuch</h5>
         </div>
       </div>
