--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-           I am really sorry!!!! Blah Blah Blah....
+           I reaally like you... blah blah..
           </p>
           <p class="fake-btn">Send</p>
         </div>
@@ -49,9 +49,9 @@
         </p>
       </div>
       <div class="six">
-        <img src="img/janvi.jpeg" alt="Janvi" class = "girl-dp" id="imagePath" />
+        <img src="img/IMG_0264.jpg" alt="preet" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Will you please forgive me??  </h3>
+          <h3 class="wish-hbd">You are an absolute goddess!!  </h3>
           <h5 id="wishText">kuch kuch</h5>
         </div>
       </div>
